logs/watchdog_20251013_1030.log
[13/10/2025 10:30:01,66] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025 10:30:01,92] END WATCHDOG 
